@@ -1,6 +1,7 @@
 ANNOUNCE
 ANNOUNCE-0.1.5
 ChangeLog
+MANIFEST
 MANIFEST.in
 README
 gsl-mode-0.1.el
@@ -9,34 +10,38 @@ guppy/__init__.py
 guppy/doc/ProfileBrowser.html
 guppy/doc/__init__.py
 guppy/doc/docexample.html
+guppy/doc/docexample.py
 guppy/doc/gsl.html
 guppy/doc/gslexample.html
 guppy/doc/guppy.html
 guppy/doc/heapy_RootState.html
 guppy/doc/heapy_UniSet.html
 guppy/doc/heapy_Use.html
+guppy/doc/heapy_tutorial.html
 guppy/doc/heapyc.html
 guppy/doc/index.html
 guppy/doc/pbscreen.jpg
 guppy/doc/sets.html
+guppy/doc/test_guppy.py
+guppy/doc/test_heapy.py
+guppy/doc/test_heapyc.py
 guppy/etc/Cat.py
 guppy/etc/Code.py
 guppy/etc/Compat.py
 guppy/etc/ExecfileWithModuleInfo.py
 guppy/etc/FSA.py
 guppy/etc/Glue.py
+guppy/etc/Help.py
 guppy/etc/IterPermute.py
 guppy/etc/KanExtension.py
 guppy/etc/KnuthBendix.py
 guppy/etc/OutputHandling.py
-guppy/etc/PrettyPrintHTML.py
 guppy/etc/RE.py
 guppy/etc/RE_Rect.py
 guppy/etc/Unpack.py
 guppy/etc/__init__.py
 guppy/etc/cmd.py
 guppy/etc/etc.py
-guppy/etc/html2text.py
 guppy/etc/textView.py
 guppy/etc/tkcursors.py
 guppy/etc/xterm.py
@@ -89,6 +94,7 @@ guppy/heapy/test/test_Spec.py
 guppy/heapy/test/test_UniSet.py
 guppy/heapy/test/test_View.py
 guppy/heapy/test/test_all.py
+guppy/heapy/test/test_dependencies.py
 guppy/heapy/test/test_heapyc.py
 guppy/heapy/test/test_menuleak.py
 guppy/heapy/test/test_sf.py
@@ -106,6 +112,7 @@ specs/heapy_RefPat.gsl
 specs/heapy_RootState.gsl
 specs/heapy_UniSet.gsl
 specs/heapy_Use.gsl
+specs/heapy_tutorial.gsl
 specs/heapyc.gsl
 specs/heapykinds.gsl
 specs/help_Prof.gsl
