@@ -6,28 +6,34 @@ Home-page: http://guppy-pe.sourceforge.net
 Author: Sverker Nilsson
 Author-email: sn@sncs.se
 License: MIT
-Description:
-
-Guppy-PE is a library and programming environment for Python,
-currently providing in particular the Heapy subsystem, which supports
-object and heap memory sizing, profiling and debugging. It also
-includes a prototypical specification language, the Guppy
-Specification Language (GSL), which can be used to formally specify
-aspects of Python programs and generate tests and documentation from a
-common source.
-
-The guppy top-level package contains the following subpackages:
-
-etc     Support modules. Contains especially the Glue protocol module.
-
-gsl     The Guppy Specification Language implementation. This can
+Description: 
+        Guppy-PE is a library and programming environment for Python,
+        currently providing in particular the Heapy subsystem, which supports
+        object and heap memory sizing, profiling and debugging. It also
+        includes a prototypical specification language, the Guppy
+        Specification Language (GSL), which can be used to formally specify
+        aspects of Python programs and generate tests and documentation from a
+        common source.
+        
+        The guppy top-level package contains the following subpackages:
+        
+        doc
+        Documentation files. These are in a package so they get installed
+        at a well-defined place, especially to support interactive help.
+        
+        etc
+        Support modules. Contains especially the Glue protocol module.
+        
+        gsl
+        The Guppy Specification Language implementation. This can
         be used to create documents and tests from a common source.
-
-heapy   The heap analysis toolset. It can be used to find information
+        
+        heapy
+        The heap analysis toolset. It can be used to find information
         about the objects in the heap and display the information
         in various ways.
-
-sets    Bitsets and 'nodesets' implemented in C.
-
+        
+        sets
+        Bitsets and 'nodesets' implemented in C.
         
 Platform: UNKNOWN
