@@ -200,7 +200,7 @@ Starts with first value.
   <pre>
 # Tests generated by: guppy.gsl.Tester
 # Main source file: /home/sverker/guppy/specs/docexample.gsl
-# Date: Thu Jun 18 14:54:11 2009
+# Date: Thu Jun 18 15:28:56 2009
 class Tester:
     tests = {}
     def test_example_kind(self, arg):
@@ -259,4 +259,4 @@ class Tester:
         t52 = arg.m_alt('abc')
     tests['.tgt.docexample.example_kind'] = test_example_kind
 </pre>
-  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Thu Jun 18 14:54:11 2009</div></body></html>
+  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Thu Jun 18 15:28:56 2009</div></body></html>
