@@ -83,4 +83,4 @@ Partition of a set of 3 objects. Total size = 176 bytes.
 &gt;&gt;&gt; hp.iso(x).sp
  0: hp.Root.i0_modules['__main__'].__dict__['x']
 &gt;&gt;&gt; </pre>
-  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Thu Jun 18 14:54:11 2009</div></body></html>
+  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Thu Jun 18 15:28:55 2009</div></body></html>
