@@ -26,7 +26,7 @@ def doit():
     setup(name="guppy",
           version="0.1.9",
           description="Guppy-PE -- A Python Programming Environment",
-          long_description="""\
+          long_description="""
 Guppy-PE is a library and programming environment for Python,
 currently providing in particular the Heapy subsystem, which supports
 object and heap memory sizing, profiling and debugging. It also
